k8s/back-python/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: back-python-prod
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-python-prod
                port:
                  number: 3000
